<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkTheme"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.ProfileFriendsActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_image"
                android:layout_width="240dp"
                android:layout_height="213dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/shadow"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile_user_find_friends"
                    android:layout_width="190dp"
                    android:layout_height="190dp"
                    android:layout_gravity="center"
                    android:src="@drawable/default_pic_user" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_name_profile_find_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/ahmed_baheg"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/linear_image"
                app:layout_constraintStart_toStartOf="@+id/linear_image"
                app:layout_constraintTop_toBottomOf="@+id/linear_image" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="serif"
                android:text="@string/hey_i_am_available_now"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_profile_find_friends" />

            <LinearLayout
                android:id="@+id/liner_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_status">

                <ImageButton
                    android:id="@+id/btn_add_friend"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/shadow_square"
                    android:src="@drawable/ic_add_friend" />

                <ImageButton
                    android:id="@+id/btn_message_friend"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/shadow_square"
                    android:src="@drawable/ic_message" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/liner_icon">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:fontFamily="serif"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btn_refuse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:fontFamily="serif"
                    android:text="@string/refuse"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>